--- a/.gitignore
+++ b/.gitignore
@@ -17,19 +17,19 @@ yarn-debug.log*
 yarn-error.log*
 
 ### Xcode ###
-*.pbxuser
+**/*.pbxuser
 !default.pbxuser
-*.mode1v3
+**/*.mode1v3
 !default.mode1v3
-*.mode2v3
+**/*.mode2v3
 !default.mode2v3
-*.perspectivev3
+**/*.perspectivev3
 !default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.xcuserstate
+**/xcuserdata
+**/*.xccheckout
+**/*.moved-aside
+**/DerivedData
+**/*.xcuserstate
 
 ### IntelliJ & PhPStorm ###
 *.iml
