fixed untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -36,12 +36,9 @@ DerivedData
 project.xcworkspace
 
 # Gradle
-.gradle
-/RNTester/android/app/build/
-/RNTester/android/app/gradle/
-/RNTester/android/app/gradlew
-/RNTester/android/app/gradlew.bat
-/ReactAndroid/build/
+android/app/gradle/
+android/app/gradlew
+android/app/gradlew.bat
 
 # Buck
 .buckd
@@ -70,4 +67,4 @@ yarn-error.log*
 .idea/
 
 # Builds
-build
+build/
