fix, feat: Welcome screen styles, create button component, keyboard hide

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
   "env": {
     "development": {
       "plugins": [
+        "transform-decorators-legacy",
         "transform-react-jsx-source"
       ]
     }
