--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "node node_modules/jest/bin/jest.js"
+    "test": "node node_modules/jest/bin/jest.js",
+    "lint": "./node_modules/.bin/eslint ."
   },
   "jest": {
     "preset": "react-native"
@@ -37,6 +38,8 @@
     "react-navigation": "^1.4.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6"
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   }
 }
