--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "core-decorators": "^0.20.0",
+    "immutable": "^3.8.2",
+    "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "16.2.0",
     "react-native": "0.52.0",
@@ -40,6 +42,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "shortid": "^2.2.8"
   }
 }
