--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   },
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "bip39": "^2.5.0",
+    "buffer": "^5.1.0",
     "core-decorators": "^0.20.0",
+    "ethers": "^3.0.15",
     "immutable": "^3.8.2",
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
@@ -43,6 +46,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "stream": "0.0.2"
   }
 }
