Font family error

--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "core-decorators": "^0.20.0",
     "immutable": "^3.8.2",
     "lodash": "^4.17.10",
+    "missing": "0.0.1",
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "16.2.0",
-    "react-native": "0.55.3",
+    "react-native": "^0.55.3",
     "react-native-cardview": "^1.1.5",
     "react-native-customisable-switch": "git://github.com/baderahmed/react-native-customisable-switch.git#118fe5aa51150b8c471c081a23ba38087aa210c6",
     "react-native-fontawesome": "^5.7.0",
