--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "react-native-smart-splash-screen": "git://github.com/rgdalessandro/react-native-smart-splash-screen.git#a803be27fececa72f446cb16b4b2d2dd6c5c09e4",
     "react-navigation": "^1.5.12",
     "react-redux": "^5.0.7",
+    "react-stomp": "^3.2.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8",
     "sockjs-client": "^1.1.4",
-    "stompjs": "^2.3.3"
+    "stompjs": "^2.3.3",
+    "utf8": "^3.0.0"
   }
 }
