--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-fontawesome": "^5.7.0",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-maps": "^0.21.0",
+    "react-native-picker-select": "^3.0.1",
     "react-native-remote-svg": "^1.1.1",
     "react-native-smart-splash-screen": "git://github.com/rgdalessandro/react-native-smart-splash-screen.git#a803be27fececa72f446cb16b4b2d2dd6c5c09e4",
     "react-navigation": "^1.5.12",
