--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native": "^0.52.0",
     "react-native-cardview": "^1.1.5",
     "react-native-customisable-switch": "git://github.com/baderahmed/react-native-customisable-switch.git#118fe5aa51150b8c471c081a23ba38087aa210c6",
+    "react-native-dash": "0.0.8",
     "react-native-fontawesome": "^5.7.0",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-maps": "^0.21.0",
