--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8",
-    "stream": "0.0.2"
     "sockjs-client": "^1.1.4",
     "stompjs": "^2.3.3",
+    "stream": "0.0.2",
     "utf8": "^3.0.0"
   }
 }
