--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "buffer": "^5.1.0",
     "core-decorators": "^0.20.0",
