--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "buffer": "^5.1.0",
     "core-decorators": "^0.20.0",
@@ -42,6 +43,7 @@
     "react-native-dash": "0.0.8",
     "react-native-fontawesome": "^5.7.0",
     "react-native-iphone-x-helper": "^1.0.2",
+    "react-native-keyboard-aware-scroll-view": "^0.4.0",
     "react-native-maps": "^0.21.0",
     "react-native-picker-select": "^3.0.1",
     "react-native-remote-svg": "^1.1.1",
@@ -58,7 +60,6 @@
     "sockjs-client": "^1.1.4",
     "stompjs": "^2.3.3",
     "stream": "0.0.2",
-    "utf8": "^3.0.0",
-    "react-native-keyboard-aware-scroll-view": "^0.4.0"
+    "utf8": "^3.0.0"
   }
 }
