--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,7 +148,7 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-uuid-generator')
+    implementation project(':react-native-uuid-generator')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:27.1.1"
     implementation "com.facebook.react:react-native:+"             // From node_modules
@@ -160,6 +160,7 @@ dependencies {
     }
     implementation 'com.google.android.gms:play-services-base:15.0.1'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation project(':react-native-dialog-progress')
 }
 
 // Run this once to be able to run the application with BUCK
