--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "react-native-cardview": "^1.1.5",
     "react-native-customisable-switch": "git://github.com/baderahmed/react-native-customisable-switch.git#118fe5aa51150b8c471c081a23ba38087aa210c6",
     "react-native-dash": "0.0.8",
+    "react-native-dialog-progress": "^1.0.2",
     "react-native-fontawesome": "^5.7.0",
     "react-native-iphone-x-helper": "^1.0.2",
+    "react-native-keyboard-aware-scroll-view": "^0.4.0",
     "react-native-maps": "^0.21.0",
     "react-native-picker-select": "^3.0.1",
     "react-native-remote-svg": "^1.1.1",
@@ -59,7 +61,6 @@
     "sockjs-client": "^1.1.4",
     "stompjs": "^2.3.3",
     "stream": "0.0.2",
-    "utf8": "^3.0.0",
-    "react-native-keyboard-aware-scroll-view": "^0.4.0"
+    "utf8": "^3.0.0"
   }
 }
