--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,12 +2,12 @@
 
 buildscript {
     repositories {
-	
+
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,7 +15,7 @@ buildscript {
 
 allprojects {
     repositories {
-		maven { url "https://maven.google.com" }
+		google()
         mavenLocal()
         jcenter()
         maven {
