--- a/ios/MobileApp/Info.plist
+++ b/ios/MobileApp/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>FuturaStd-Light.otf</string>
+		<string>FuturaStd-Medium.otf</string>
 		<string>FontAwesome.otf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
