--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "react-native-cardview": "^1.1.5",
     "react-native-customisable-switch": "git://github.com/baderahmed/react-native-customisable-switch.git#118fe5aa51150b8c471c081a23ba38087aa210c6",
     "react-native-dash": "0.0.8",
-    "react-native-dialog-progress": "^1.0.2",
     "react-native-fontawesome": "^5.7.0",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.4.0",
     "react-native-maps": "^0.21.0",
     "react-native-picker-select": "^3.0.1",
     "react-native-remote-svg": "^1.1.1",
+    "react-native-simple-toast": "0.0.8",
     "react-native-smart-splash-screen": "git://github.com/rgdalessandro/react-native-smart-splash-screen.git#a803be27fececa72f446cb16b4b2d2dd6c5c09e4",
     "react-native-uuid-generator": "^4.0.0",
     "react-navigation": "^1.5.12",
