--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,6 +134,14 @@ android {
                 keyPassword MYAPP_RELEASE_KEY_PASSWORD
             }
         }
+        debug {
+            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                storeFile file(MYAPP_RELEASE_STORE_FILE)
+                storePassword MYAPP_RELEASE_STORE_PASSWORD
+                keyAlias MYAPP_RELEASE_KEY_ALIAS
+                keyPassword MYAPP_RELEASE_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         release {
@@ -158,7 +166,6 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-uuid-generator')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:27.1.1"
     implementation "com.facebook.react:react-native:+"             // From node_modules
@@ -171,6 +178,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:15.0.1'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.facebook.fresco:animated-gif:1.3.0'
+    implementation project(':react-native-uuid-generator')
+    implementation project(':react-native-fbsdk')
 }
 
 // Run this once to be able to run the application with BUCK
