--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "16.2.0",
-    "react-native": "^0.52.0",
+    "react-native": "^0.55.4",
     "react-native-cardview": "^1.1.5",
     "react-native-customisable-switch": "git://github.com/baderahmed/react-native-customisable-switch.git#118fe5aa51150b8c471c081a23ba38087aa210c6",
     "react-native-dash": "0.0.8",
+    "react-native-fbsdk": "^0.7.0",
     "react-native-fontawesome": "^5.7.0",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.4.0",
