--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,7 +98,7 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "com.mobileapp"
+        applicationId "com.locktrip"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
