--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,6 +180,7 @@ dependencies {
     implementation 'com.facebook.fresco:animated-gif:1.3.0'
     implementation project(':react-native-uuid-generator')
     implementation project(':react-native-fbsdk')
+    implementation project(':react-native-image-picker')
 }
 
 // Run this once to be able to run the application with BUCK
