--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "apisauce": "^0.15.2",
     "axios": "^0.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "buffer": "^5.1.0",
@@ -43,6 +44,7 @@
     "react-native-dash": "0.0.8",
     "react-native-fbsdk": "^0.7.0",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-image-picker": "^0.26.10",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.4.0",
     "react-native-maps": "^0.21.0",
