--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -171,6 +171,7 @@ dependencies {
     implementation project(':react-native-uuid-generator')
     implementation project(':react-native-fbsdk')
     implementation project(':react-native-image-picker')
+    implementation project(':react-native-fast-crypto')
 }
 
 // Run this once to be able to run the application with BUCK
