--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "sockjs-client": "^1.1.4",
     "stompjs": "^2.3.3",
     "stream": "0.0.2",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "rfc4648": "^1.0.0"
   }
 }
