--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "base-64": "^0.1.0",
     "buffer": "^5.1.0",
     "core-decorators": "^0.20.0",
-    "ethers": "^3.0.15",
+    "ethers": "git://github.com/yuri930/ethers.js.git",
     "immutable": "^3.8.2",
     "javascript-time-ago": "^1.0.30",
     "lodash": "^4.17.10",
