--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ethers": "^3.0.15",
     "immutable": "^3.8.2",
     "javascript-time-ago": "^1.0.30",
+    "locktrip-service-layer": "^1.0.4",
     "lodash": "^4.17.10",
     "missing": "0.0.1",
     "moment": "^2.22.1",
