--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "react-native-simple-toast": "0.0.8",
     "react-native-smart-splash-screen": "git://github.com/rgdalessandro/react-native-smart-splash-screen.git#a803be27fececa72f446cb16b4b2d2dd6c5c09e4",
     "react-native-tab-view": "^1.0.2",
+    "react-native-typography": "^1.3.0",
     "react-native-uuid-generator": "^4.0.0",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^1.5.12",
     "react-redux": "^5.0.7",
     "react-simple-dropdown": "^3.2.0",
@@ -71,11 +73,11 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "rfc4648": "^1.0.0",
     "shortid": "^2.2.8",
     "sockjs-client": "^1.1.4",
     "stompjs": "^2.3.3",
     "stream": "0.0.2",
-    "utf8": "^3.0.0",
-    "rfc4648": "^1.0.0"
+    "utf8": "^3.0.0"
   }
 }
