Sock on ios implemented

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "rfc4648": "^1.1.0",
     "shortid": "^2.2.8",
     "sockjs-client": "^1.1.4",
+    "stomp-websocket-js": "^1.0.0",
     "stompjs": "^2.3.3",
     "stream": "0.0.2",
     "utf8": "^3.0.0"
