--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -103,8 +103,12 @@ android {
         targetSdkVersion 27
         versionCode 5
         versionName "1.0." + versionCode
+        multiDexEnabled  true
         ndk {
             abiFilters "armeabi-v7a", "x86"
+        }
+        jackOptions {
+            enabled true
         }
     }
     splits {
@@ -140,6 +144,25 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    packagingOptions {
+        exclude 'META-INF/spring.tooling'
+        exclude 'META-INF/spring.*'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
@@ -172,6 +195,11 @@ dependencies {
     implementation project(':react-native-fbsdk')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-fast-crypto')
+    implementation group: 'org.springframework', name: 'spring-framework-bom', version: '4.2.2.RELEASE'
+    implementation group: 'org.springframework', name: 'spring-messaging', version: '4.2.2.RELEASE'
+    implementation group: 'org.springframework', name: 'spring-websocket', version: '4.2.2.RELEASE'
+    implementation "org.glassfish.tyrus.bundles:tyrus-standalone-client:1.12"
+    implementation 'com.android.support:multidex:1.0.3'
 }
 
 // Run this once to be able to run the application with BUCK
