--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^1.0.0",
     "apisauce": "^0.15.2",
     "axios": "^0.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -39,11 +40,13 @@
     "missing": "0.0.1",
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
+    "query-string": "^6.1.0",
     "react": "16.2.0",
     "react-mixin": "^2.0.2",
     "react-native": "^0.55.4",
     "react-native-background-fetch": "^2.0.8",
     "react-native-cardview": "^1.1.5",
+    "react-native-checkbox": "^2.0.0",
     "react-native-customisable-switch": "git://github.com/baderahmed/react-native-customisable-switch.git#118fe5aa51150b8c471c081a23ba38087aa210c6",
     "react-native-dash": "0.0.8",
     "react-native-easy-toast": "^1.1.0",
