--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "base-64": "^0.1.0",
     "buffer": "^5.1.0",
+    "card-validator": "^5.0.0",
     "core-decorators": "^0.20.0",
     "ethers": "git://github.com/yuri930/ethers.js.git",
     "immutable": "^3.8.2",
@@ -57,6 +58,7 @@
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.4.4",
     "react-native-maps": "^0.21.0",
+    "react-native-masked-text": "^1.7.2",
     "react-native-modal-datetime-picker": "^5.1.0",
     "react-native-phone-input": "^0.2.1",
     "react-native-picker-select": "^3.0.1",
