--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,6 @@ buck-out
 
 # Android
 local.properties
-.externalNativeBuild
 
 # Node
 node_modules
@@ -70,3 +69,5 @@ yarn-error.log*
 
 # Builds
 build/
+.externalNativeBuild/
+*/.externalNativeBuild/*
