--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "react-native-simple-toast": "0.0.8",
     "react-native-smart-splash-screen": "git://github.com/rgdalessandro/react-native-smart-splash-screen.git#a803be27fececa72f446cb16b4b2d2dd6c5c09e4",
     "react-native-tab-view": "^1.0.2",
+    "react-native-typography": "^1.3.0",
     "react-native-uuid-generator": "^4.0.0",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.11.2",
     "react-navigation-redux-helpers": "^2.0.5",
     "react-redux": "^5.0.7",
@@ -74,6 +76,7 @@
     "react-stomp": "^3.2.0",
     "react-switch": "^2.3.2",
     "redux": "^3.7.2",
+    "redux-actions": "^2.6.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
