--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "javascript.implicitProjectConfig.experimentalDecorators": true,
-    "eslint.enable": false,
+    "eslint.enable": true,
     "git.ignoreLimitWarning": true
 }
