--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:background="@color/lockchain_orange"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      >
       <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
       <activity
         android:name=".MainActivity"
