--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -203,11 +203,15 @@ dependencies {
     implementation project(':react-native-fbsdk')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-image-resizer')
+
     implementation project(':react-native-fast-crypto')
 
     implementation group: 'org.springframework', name: 'spring-messaging', version: '4.3.18.RELEASE'
     implementation group: 'org.springframework', name: 'spring-websocket', version: '4.3.18.RELEASE'
     implementation "org.glassfish.tyrus.bundles:tyrus-standalone-client:1.13.1"
+
+    implementation 'com.facebook.fresco:fresco:1.9.0'
+    implementation 'com.facebook.fresco:animated-gif:1.9.0'
 }
 
 // Run this once to be able to run the application with BUCK
