--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-image-picker": "^0.26.10",
     "react-native-image-resizer": "^1.0.0",
     "react-native-image-zoom-viewer": "^2.2.12",
+    "react-native-indicators": "^0.13.0",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.7.2",
     "react-native-maps": "^0.21.0",
