--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -212,6 +212,8 @@ dependencies {
 
     implementation 'com.facebook.fresco:fresco:1.9.0'
     implementation 'com.facebook.fresco:animated-gif:1.9.0'
+    
+    implementation project(':react-native-fast-image')
 }
 
 // Run this once to be able to run the application with BUCK
