--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -20,3 +20,5 @@ project(':react-native-image-resizer').projectDir = new File(rootProject.project
 
 include ':react-native-fast-crypto'
 project(':react-native-fast-crypto').projectDir = new File(rootProject.projectDir, '../library/react-native-fast-crypto/android')
+include ':react-native-fast-image'
+project(':react-native-fast-image').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fast-image/android')
