--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-customisable-switch": "git://github.com/baderahmed/react-native-customisable-switch.git#118fe5aa51150b8c471c081a23ba38087aa210c6",
     "react-native-dash": "0.0.8",
     "react-native-easy-toast": "^1.1.0",
+    "react-native-fast-image": "^5.0.3",
     "react-native-fbsdk": "^0.7.0",
     "react-native-fontawesome": "^5.7.0",
     "react-native-image-picker": "^0.26.10",
