--- a/ios/MobileApp/Info.plist
+++ b/ios/MobileApp/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.11</string>
+	<string>1.0.14</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -30,7 +30,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>1</string>
 	<key>FacebookAppID</key>
 	<string>1151283785030781</string>
 	<key>FacebookDisplayName</key>
@@ -70,6 +70,7 @@
 		<string>FuturaStd-Light.otf</string>
 		<string>FuturaStd-Medium.otf</string>
 		<string>FontAwesome.otf</string>
+		<string>MaterialIcons.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
