--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.2",
     "jest-react-native": "^18.0.0",
-    "react-test-renderer": "16.2.0"
+    "react-test-renderer": "16.2.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-native start",
@@ -81,8 +83,6 @@
     "react-switch": "^2.3.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.6.1",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "rfc4648": "^1.1.0",
     "shortid": "^2.2.8",
