--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,7 +79,7 @@ project.ext.react = [
 apply from: "../../node_modules/react-native/react.gradle"
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'MaterialIcons.ttf'] // Name of the font files you want to copy
+    iconFontNames: [ 'MaterialIcons.ttf', 'AntDesign.ttf'] // Name of the font files you want to copy
 ]
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
@@ -111,9 +111,6 @@ android {
         multiDexEnabled  true
         ndk {
             abiFilters "armeabi-v7a", "x86"
-        }
-        jackOptions {
-            enabled true
         }
     }
     splits {
@@ -201,8 +198,8 @@ dependencies {
         exclude group: 'com.google.android.gms', module: 'play-services-base'
         exclude group: 'com.google.android.gms', module: 'play-services-maps'
     }
-    implementation 'com.google.android.gms:play-services-base:15.0.1'
-    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-base:16.0.1'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.facebook.fresco:animated-gif:1.3.0'
     implementation project(':react-native-uuid-generator')
     implementation project(':react-native-fbsdk')
@@ -219,6 +216,7 @@ dependencies {
     implementation 'com.facebook.fresco:animated-gif:1.9.0'
     
     implementation project(':react-native-fast-image')
+    implementation project(':react-native-vector-icons')
 }
 
 // Run this once to be able to run the application with BUCK
