--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-fast-image": "^5.0.3",
     "react-native-fbsdk": "^0.7.0",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-hyperlink": "^0.0.14",
     "react-native-image-picker": "^0.26.10",
     "react-native-image-resizer": "^1.0.0",
     "react-native-image-zoom-viewer": "^2.2.12",
