ios build version

--- a/ios/MobileApp/Info.plist
+++ b/ios/MobileApp/Info.plist
@@ -30,7 +30,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>FacebookAppID</key>
 	<string>1151283785030781</string>
 	<key>FacebookDisplayName</key>
@@ -56,15 +56,15 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) would like to use your camera</string>
+	<string>LockTrip would like to use your camera to change profile image</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>$(PRODUCT_NAME) would like to your microphone (for videos)</string>
+	<string>LockTrip would like to your microphone (for videos)</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>$(PRODUCT_NAME) would like to save photos to your photo gallery</string>
+	<string>LockTrip would like to save photos to your photo gallery to change profile image</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>$(PRODUCT_NAME) would like access to your photo gallery</string>
+	<string>LockTrip would like access to your photo gallery to change profile image</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>FuturaStd-Light.otf</string>
