upgrade hotel bookng apk to 41, fix hotel confirm part

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "immutability-helper": "^2.7.1",
     "immutable": "^3.8.2",
     "javascript-time-ago": "^1.0.30",
-    "locktrip-service-layer": "^1.0.38",
+    "locktrip-service-layer": "1.0.41",
     "lodash": "^4.17.10",
     "missing": "0.0.1",
     "moment": "^2.22.1",
