--- a/ios/Podfile
+++ b/ios/Podfile
@@ -44,14 +44,18 @@ target 'MobileApp' do
 end
 
 post_install do |installer|
-  installer.pods_project.targets.each do |target|
+    installer.pods_project.targets.each do |target|
     if target.name == 'react-native-google-maps'
-      target.build_configurations.each do |config|
-        config.build_settings['CLANG_ENABLE_MODULES'] = 'No'
-      end
+        target.build_configurations.each do |config|
+            config.build_settings['CLANG_ENABLE_MODULES'] = 'No'
+        end
     end
-    if target.name == "React"
-      target.remove_from_project
+#    if target.name == "React"
+#      target.remove_from_project
+#    end
+    targets_to_ignore = %w(React yoga)
+    if targets_to_ignore.include? target.name
+        target.remove_from_project
     end
   end
 end
